# ultravox-client-sdk-python

./: .gitignore  Justfile  README.md
.github/workflows/: tests.yml
example/: README.md  pyproject.toml
example/ultravox_example/: client.py
ultravox-client/: README.md  pyproject.toml
ultravox-client/ultravox_client/: __init__.py  async_close.py  audio.py  patched_event_emitter.py  patched_event_emitter_test.py  room_listener.py  session.py  session_test.py
