[tool.poetry]
name = "ultravox-example"
version = "0.0.1"
packages = [
    { include = "ultravox_example", from = "." },
]
description = "Example use of ultravox-client package."
authors = ["Fixie Team <hello@fixie.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultravox-client = { path = "../ultravox-client", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.3"
pyright = "^1.1.379"
deptry = "^0.12.0"
types-mock = "^5.1.0.2"
pytest-asyncio = "^0.23.7"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.deptry]
extend_exclude = [".*test\\.py", ".*tool\\.py"]
